--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -1,24 +1,20 @@
+@import 'paths';
 
 // Vendor main
-$fa-font-path: "/src/assets/fonts/font-awesome";
 @import '~font-awesome/scss/font-awesome';
-//@import './styles/vendor/font-awesome/font-awesome';
-//@import '~font-awesome/css/font-awesome';
 
 @import '~uswds/src/stylesheets/lib/bourbon';
 
 // Internal variable should be declared before uswds variable to take higher precendence
 @import 'variables';
+@import 'utilities';
 @import 'margin-padding';
 @import 'global';
 @import 'typography';
 
-$image_path: '~uswds/dist/img';
-$font-path: '/src/assets/fonts';
 @import '~uswds/src/stylesheets/uswds';
-//@import './styles/vendor/uswds/uswds';
 
-@import '/src/ui-kit/footer/footer';
+@import 'styles/components/footer';
 
 html, body{
   height: 100%;
