--- a/src/app/styles/components/_footer.scss
+++ b/src/app/styles/components/_footer.scss
@@ -44,8 +44,7 @@
     display: inline-block;
     min-height: 10rem;
     min-width: 10rem;
-    //@include background-image(url('../../assets/img/logos/gsa-reverse.svg'), url('../../assets/img/logos/gsa-reverse.png'));
-    background-image: url('../../assets/img/logos/gsa-reverse.png');
+    @include background-image(url($assets-path + '/img/logos/gsa-reverse.svg'), url($assets-path + '/img/logos/gsa-reverse.png'));
     background-size: 10rem auto;
     background-repeat: no-repeat;
   }
