--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -7,7 +7,7 @@
     <!--Side Navigation-->
     <nav>
       <ul class="usa-sidenav-list">
-        <li><a href="{{ currentUrl }}#gen-info">General Infornation</a></li>
+        <li><a href="{{ currentUrl }}#gen-info">General Information</a></li>
         <li><a href="{{ currentUrl }}#classification">Classification</a></li>
         <li><a href="{{ currentUrl }}#syn-desc">Synopsis/Description</a></li>
         <li><a href="{{ currentUrl }}#package">Packages</a></li>
