--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -19,7 +19,7 @@
       <!--Side Navigation-->
       <nav>
         <ul class="usa-sidenav-list">
-          <li><a href="{{currentUrl}}#overview" target="self">Overview</a></li>
+          <li><a href="{{currentUrl}}#overview">Overview</a></li>
           <li><a href="{{currentUrl}}#authorizations">Authorizations</a></li>
           <li><a href="{{currentUrl}}#financial-information">Financial Information</a></li>
           <li><a href="{{currentUrl}}#criteria-for-applying">Criteria for Applying</a></li>
