--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -125,12 +125,14 @@
     <section id="contact-info">
       <h2>Contact Information</h2>
       <div class="usa-grid-full" *ngIf="opportunityLocation">
-        <h3>Contracting Office Address:</h3>
-        <span *ngIf="opportunityLocation.street">{{opportunityLocation.street}},</span>
-        <span *ngIf="opportunityLocation.city">{{opportunityLocation.city}}, </span>
-        <span *ngIf="opportunityLocation.state">{{opportunityLocation.state}}</span>
-        <span *ngIf="opportunityLocation.country">{{opportunityLocation.country}}</span>
-        <span *ngIf="opportunityLocation.zip">{{opportunityLocation.zip}}</span>
+        <div class="usa-width-one-whole m_B-4x">
+          <h3>Contracting Office Address:</h3>
+          <ng-container *ngIf="opportunityLocation.street">{{opportunityLocation.street}},</ng-container>
+          <ng-container *ngIf="opportunityLocation.city">{{opportunityLocation.city}}, </ng-container>
+          <ng-container *ngIf="opportunityLocation.state">{{opportunityLocation.state}}</ng-container>
+          <ng-container *ngIf="opportunityLocation.country">{{opportunityLocation.country}}</ng-container>
+          <ng-container *ngIf="opportunityLocation.zip">{{opportunityLocation.zip}}</ng-container>
+        </div>
       </div>
       <div class="usa-grid-full" *ngIf="opportunity.data?.pointOfContact">
         <div class="usa-width-one-half" *ngIf="hasPOC(0)">
