--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -8,7 +8,7 @@
     <nav>
       <ul class="usa-sidenav-list">
         <li><a href="{{ currentUrl + '#' + generateID(opportunityFields.General) }}">General Infornation</a></li>
-        <li><a href="{{ currentUrl }}#classification">Classification</a></li>
+        <li><a href="{{ currentUrl + '#' + generateID(opportunityFields.Classification) }}">Classification</a></li>
         <li><a href="{{ currentUrl }}#syn-desc">Synopsis/Description</a></li>
         <li><a href="{{ currentUrl }}#package">Packages</a></li>
         <li><a href="{{ currentUrl }}#contact-info">Contact Information</a></li>
@@ -93,10 +93,11 @@
       </ul>
     </section>
 
-    <section id="classification">
+    <section [attr.id]="generateID(opportunityFields.Classification)" *ngIf="shouldBeDisplayed(opportunityFields.Classification)">
       <h2>Classification</h2>
       <ul class="usa-unstyled-list">
-        <li *ngIf = "originalOpportunity">
+        <li [attr.id]="generateID(opportunityFields.OriginalSetAside, 'classification')"
+            *ngIf="originalOpportunity && shouldBeDisplayed(opportunityFields.OriginalSetAside)">
           <strong> Original Set Aside: </strong>
           <ng-container *ngIf="originalOpportunity.data?.solicitation?.setAside && dictionary">
             <ng-container *ngFor = "let element of [originalOpportunity?.data?.solicitation?.setAside] | filterMultiArrayObject:dictionary.set_aside_type:'element_id':false:''">
@@ -105,19 +106,22 @@
           </ng-container>
           <ng-container *ngIf="!originalOpportunity?.data?.solicitation?.setAside">N/A</ng-container>
         </li>
-        <li *ngIf = "opportunity.data?.solicitation?.setAside && dictionary">
+        <li [attr.id]="generateID(opportunityFields.SetAside, 'classification')"
+            *ngIf="opportunity.data?.solicitation?.setAside && dictionary && shouldBeDisplayed(opportunityFields.SetAside)">
           <strong>Set Aside: </strong>
           <ng-container *ngFor = "let element of [opportunity.data?.solicitation?.setAside] | filterMultiArrayObject:dictionary.set_aside_type:'element_id':false:''">
             <ng-container> {{ element.value }}</ng-container>
           </ng-container>
         </li>
-        <li *ngIf="opportunity.data?.classificationCode && dictionary">
+        <li [attr.id]="generateID(opportunityFields.ClassificationCode, 'classification')"
+            *ngIf="opportunity.data?.classificationCode && dictionary && shouldBeDisplayed(opportunityFields.ClassificationCode)">
           <strong>Classification Code: </strong>
           <ng-container *ngFor = "let element of [opportunity.data?.classificationCode] | filterMultiArrayObject:dictionary.classification_code:'element_id':false:''">
             {{ element.value }}
           </ng-container>
         </li>
-        <li *ngIf="opportunity.data?.naicsCode && opportunity.data?.naicsCode[0] != null && dictionary">
+        <li [attr.id]="generateID(opportunityFields.NAICSCode, 'classification')"
+            *ngIf="opportunity.data?.naicsCode && opportunity.data?.naicsCode[0] != null && dictionary && shouldBeDisplayed(opportunityFields.NAICSCode)">
           <strong>NAICS Code(s): </strong>
           <ul>
             <li *ngFor = "let element of opportunity.data?.naicsCode | filterMultiArrayObject:dictionary.naics_code:'element_id':false:''">
@@ -125,11 +129,32 @@
             </li>
           </ul>
         </li>
-        <li *ngIf="opportunity.data?.placeOfPerformance && (opportunity.data?.placeOfPerformance?.streetAddress || opportunity.data?.placeOfPerformance?.city || opportunity.data?.placeOfPerformance?.country || opportunity.data?.placeOfPerformance?.state || opportunity.data?.placeOfPerformance?.zip)">
-          <strong>Place of Performance: </strong>
-          <div>{{opportunity.data?.placeOfPerformance?.streetAddress}}</div>
-          <div *ngIf="opportunity.data?.placeOfPerformance?.city">{{opportunity.data?.placeOfPerformance?.city}}, {{opportunity.data?.placeOfPerformance?.state}} {{opportunity.data?.placeOfPerformance?.zip}}</div>
-          <div>{{opportunity.data?.placeOfPerformance?.country}}</div>
+        <li [attr.id]="generateID(opportunityFields.POP, 'classification')"
+            *ngIf="opportunity.data?.placeOfPerformance && (opportunity.data?.placeOfPerformance?.streetAddress
+            || opportunity.data?.placeOfPerformance?.city || opportunity.data?.placeOfPerformance?.country
+            || opportunity.data?.placeOfPerformance?.state || opportunity.data?.placeOfPerformance?.zip)
+            && shouldBeDisplayed(opportunityFields.POP)">
+          <strong >Place of Performance: </strong>
+          <div [attr.id]="generateID(opportunityFields.POPLocation, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.POPLocation)">
+            {{opportunity.data?.placeOfPerformance?.streetAddress}}
+          </div>
+
+          <div>
+            <span [attr.id]="generateID(opportunityFields.POPCity, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.POPCity)">
+              {{opportunity.data?.placeOfPerformance?.city}}
+            </span>
+            <ng-container *ngIf="opportunity.data?.placeOfPerformance?.city && opportunity.data?.placeOfPerformance?.state">,</ng-container>
+            <span [attr.id]="generateID(opportunityFields.POPState, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.POPState)">
+              {{opportunity.data?.placeOfPerformance?.state}}
+            </span>
+            <span [attr.id]="generateID(opportunityFields.POPZip, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.POPZip)">
+              {{opportunity.data?.placeOfPerformance?.zip}}
+            </span>
+          </div>
+
+          <div [attr.id]="generateID(opportunityFields.POPCountry, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.POPCountry)">
+            {{opportunity.data?.placeOfPerformance?.country}}
+          </div>
         </li>
       </ul>
     </section>
