--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -11,7 +11,7 @@
         <li><a href="{{ currentUrl + '#' + generateID(opportunityFields.Classification) }}">Classification</a></li>
         <li><a href="{{ currentUrl }}#syn-desc">Synopsis/Description</a></li>
         <li><a href="{{ currentUrl }}#package">Packages</a></li>
-        <li><a href="{{ currentUrl }}#contact-info">Contact Information</a></li>
+        <li><a href="{{ currentUrl + '#' + generateID(opportunityFields.Classification) }}">Contact Information</a></li>
         <li><a href="{{ currentUrl }}#history">History</a></li>
       </ul>
     </nav>
@@ -159,51 +159,66 @@
       </ul>
     </section>
 
-    <section id="contact-info">
+    <section [attr.id]="generateID(opportunityFields.Contact)" *ngIf="shouldBeDisplayed(opportunityFields.Contact)">
       <h2>Contact Information</h2>
       <div class="usa-grid-full" *ngIf="opportunity.data?.pointOfContact">
-        <div class="usa-width-one-half" *ngIf="hasPOC(0)">
+        <div class="usa-width-one-half" [attr.id]="generateID(opportunityFields.POC, 'contact-primary')" *ngIf="hasPOC(0) && shouldBeDisplayed(opportunityFields.POC)">
           <h3>Primary Point of Contact</h3>
           <ul class="usa-unstyled-list">
-            <li><strong>{{opportunity.data?.pointOfContact[0].fullName}}</strong></li>
-            <li *ngIf="opportunity.data?.pointOfContact[0].title">
+            <li [attr.id]="generateID(opportunityFields.POCFullName, 'contact-primary')"
+                *ngIf="shouldBeDisplayed(opportunityFields.POCFullName)">
+              <strong>{{opportunity.data?.pointOfContact[0].fullName}}</strong>
+            </li>
+            <li [attr.id]="generateID(opportunityFields.POCTitle, 'contact-primary')"
+                *ngIf="opportunity.data?.pointOfContact[0].title && shouldBeDisplayed(opportunityFields.POCTitle)">
               <!--TODO: fix capitalize pipe-->
               <em [innerHTML]="opportunity.data?.pointOfContact[0].title"></em>
             </li>
-            <li *ngIf="opportunity.data?.pointOfContact[0].email">
+            <li [attr.id]="generateID(opportunityFields.POCEmail, 'contact-primary')"
+                *ngIf="opportunity.data?.pointOfContact[0].email && shouldBeDisplayed(opportunityFields.POCEmail)">
               <i class="fa fa-envelope-o" aria-hidden="true"></i> &nbsp;
               <a href="mailto:{{opportunity.data?.pointOfContact[0].email}}">
                 {{opportunity.data?.pointOfContact[0].email}}
               </a>
             </li>
-            <li *ngIf="opportunity.data?.pointOfContact[0].phone">
+            <li [attr.id]="generateID(opportunityFields.POCPhone, 'contact-primary')"
+                *ngIf="opportunity.data?.pointOfContact[0].phone && shouldBeDisplayed(opportunityFields.POCPhone)">
               <i class="fa fa-phone" aria-hidden="true"></i> &nbsp;
               {{opportunity.data?.pointOfContact[0].phone}}
             </li>
-            <li *ngIf="opportunity.data?.pointOfContact[0].fax">
+            <li [attr.id]="generateID(opportunityFields.POCFax, 'contact-primary')"
+                *ngIf="opportunity.data?.pointOfContact[0].fax && shouldBeDisplayed(opportunityFields.POCFax)">
               <i class="fa fa-fax" aria-hidden="true"></i> &nbsp;
               {{opportunity.data?.pointOfContact[0].fax}}
             </li>
           </ul>
         </div>
-        <div class="usa-width-one-half" *ngIf="hasPOC(1)">
+        <div class="usa-width-one-half" [attr.id]="generateID(opportunityFields.POC, 'contact-secondary')" *ngIf="hasPOC(1) && shouldBeDisplayed(opportunityFields.POC)">
           <h3>Secondary Point of Contact</h3>
           <ul class="usa-unstyled-list">
-            <li><strong>{{opportunity.data?.pointOfContact[1].fullName}}</strong></li>
-            <li *ngIf="opportunity.data?.pointOfContact[1].title">
+            <li [attr.id]="generateID(opportunityFields.POCFullName, 'contact-secondary')"
+                *ngIf="shouldBeDisplayed(opportunityFields.POCFullName)">
+              <strong>{{opportunity.data?.pointOfContact[1].fullName}}</strong>
+            </li>
+            <li [attr.id]="generateID(opportunityFields.POCTitle, 'contact-secondary')"
+                *ngIf="opportunity.data?.pointOfContact[1].title && shouldBeDisplayed(opportunityFields.POCTitle)">
+              <!--TODO: fix capitalize pipe-->
               <em [innerHTML]="opportunity.data?.pointOfContact[1].title"></em>
             </li>
-            <li *ngIf="opportunity.data?.pointOfContact[1].email">
+            <li [attr.id]="generateID(opportunityFields.POCEmail, 'contact-secondary')"
+                *ngIf="opportunity.data?.pointOfContact[1].email && shouldBeDisplayed(opportunityFields.POCEmail)">
               <i class="fa fa-envelope-o" aria-hidden="true"></i> &nbsp;
               <a href="mailto:{{opportunity.data?.pointOfContact[1].email}}">
                 {{opportunity.data?.pointOfContact[1].email}}
               </a>
             </li>
-            <li *ngIf="opportunity.data?.pointOfContact[1].phone">
+            <li [attr.id]="generateID(opportunityFields.POCPhone, 'contact-secondary')"
+                *ngIf="opportunity.data?.pointOfContact[1].phone && shouldBeDisplayed(opportunityFields.POCPhone)">
               <i class="fa fa-phone" aria-hidden="true"></i> &nbsp;
               {{opportunity.data?.pointOfContact[1].phone}}
             </li>
-            <li *ngIf="opportunity.data?.pointOfContact[1].fax">
+            <li [attr.id]="generateID(opportunityFields.POCFax, 'contact-secondary')"
+                *ngIf="opportunity.data?.pointOfContact[1].fax && shouldBeDisplayed(opportunityFields.POCFax)">
               <i class="fa fa-fax" aria-hidden="true"></i> &nbsp;
               {{opportunity.data?.pointOfContact[1].fax}}
             </li>
