--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -198,3 +198,14 @@
     <samPOC [data]="pointOfContact"></samPOC>
   </div>
 </div>
+<br/>
+<div class="usa-grid">
+  <h2 class="usa-width-one">Name Entry &lt;samNameEntry&gt;</h2>
+  <div class="usa-width-one-half">
+    <samNameEntry [model]="nameModel" [prefix]="'ui-kit'"></samNameEntry>
+  </div>
+  <div class="usa-width-one-half">
+    <h3>Model</h3>
+    <pre><code>{{nameModel | json}}</code></pre>
+  </div>
+</div>
