implement new html/css for alerts page, move alert header to alerts module

--- a/src/app/alerts/alert-header/alert-header.template.html
+++ b/src/app/alerts/alert-header/alert-header.template.html
@@ -11,7 +11,7 @@
         <p class="usa-alert-text truncate">{{alert.description}}</p>
       </div>
       <div class="alert-link">
-        <a class="usa-nav-link" [routerLink]="['/system-alerts']">More alerts&nbsp;<i class="fa fa-arrow-circle-o-right"></i></a>
+        <a class="usa-nav-link" [routerLink]="[alertsPath]">More alerts&nbsp;<i class="fa fa-arrow-circle-o-right"></i></a>
       </div>
     </div>
   </div>
