--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -107,6 +107,16 @@
           <strong>Original Archive Date: </strong>
           {{ originalOpportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY' }}
         </li>
+        <li [attr.id]="generateID(opportunityFields.StatutoryAuthority, 'general')"
+            *ngIf="opportunity?.data?.justificationAuthority?.authority && shouldBeDisplayed(opportunityFields.StatutoryAuthority)">
+          <strong>J&A Statutory Authority: </strong>
+          {{ opportunity?.data?.justificationAuthority?.authority }}
+        </li>
+        <li [attr.id]="generateID(opportunityFields.ModificationNumber, 'general')"
+            *ngIf="opportunity?.data?.justificationAuthority?.modificationNumber && shouldBeDisplayed(opportunityFields.ModificationNumber)">
+          <strong>Modification Number: </strong>
+          {{ opportunity?.data?.justificationAuthority?.modificationNumber }}
+        </li>
       </ul>
     </section>
 
