--- a/src/app/alerts/alert-item/alert-item.template.html
+++ b/src/app/alerts/alert-item/alert-item.template.html
@@ -1,5 +1,5 @@
 <div class="alert-type-indicator" [ngClass]="alert.colorClass()">
-  <i class="alert-type-icon fa" [ngClass]="alert.iconClass()"></i>{{alert.type()}}
+  <i class="alert-type-icon fa" [ngClass]="alert.iconClass()"></i>{{alert.severity()}}
 </div>
 <div class="alert-item usa-grid-full">
   <div class="usa-width-three-fourths">
