--- a/src/app/alerts/alerts.style.css
+++ b/src/app/alerts/alerts.style.css
@@ -36,6 +36,10 @@
   padding-bottom: 12px;
 }
 
+.alert-page-title {
+  margin-top: .67em;
+}
+
 :host >>> .usa-pagination {
   text-align: center;
 }
