--- a/src/app/alerts/alert-item/alert-item.style.css
+++ b/src/app/alerts/alert-item/alert-item.style.css
@@ -6,7 +6,7 @@
 }
 
 .alert-title {
-  margin-top: 8px;
+  margin-top: 8px !important;
 }
 
 .alert-type-icon {
@@ -18,6 +18,7 @@
 }
 
 .alert-type-indicator {
+  width: 8em;
   display: inline-block;
   padding: 4px;
   border: 1px solid black;
