--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -6,8 +6,7 @@
     <samSearchbar (onSearch)="onSearchClick($event)" [keyword]="keyword" [placeholder]="'#keyword'" *ngIf="false"></samSearchbar>
     <div *ngIf="showOptional" class="usa-width-one">
       <h3>Common Filters:</h3>
-      <label>Office name:</label>
-      <agencyPicker #fhInput [multimode]="false" (organization)="onOrganizationChange($event)"></agencyPicker>
+      <agencyPicker #fhInput [multimode]="false" [label]="'Filter by Organization:'" (organization)="onOrganizationChange($event)"></agencyPicker>
       <hr *ngIf="data.results" class="m_T-5x"/>
     </div>
 		<div *ngFor="let row of data.results">
