--- a/src/app/Help/sections/reference-library/reference-library.template.html
+++ b/src/app/Help/sections/reference-library/reference-library.template.html
@@ -11,10 +11,10 @@
     <div class="usa-width-one-whole m_L-8x relative reference-image-container">
       <div class="usa-width-one-whole">
         <div class="usa-width-one-third pull-right" *ngFor="let item of data.Federal; let i= index">
-          <div class="usa-width-three-fourths image-wrap relative black-border">
-            <a class="featured-reference-toggle" (click)="selectDetail(item,'Federal')"><i class="fa fa-plus" [ngClass]="getItemClass(item,'Federal')"></i></a>
-            <a class="featured-reference-imagelink" (click)="selectDetail(item,'Federal')"><img class="reference-image" src="../assets/img/placeholder.jpg"></a>
-            <span (click)="selectDetail(item,'Federal')" class="featured-reference-title">{{item.title}}</span>
+          <div class="usa-width-three-fourths image-wrap relative black-border" tabindex="0" (keyup.enter)="selectDetail(item,'Federal')">
+            <a [id]="'federal_assistance-icon-'+i" class="featured-reference-toggle" (click)="selectDetail(item,'Federal')"><i class="fa fa-plus" [ngClass]="getItemClass(item,'Federal')"></i></a>
+            <a [id]="'federal_assistance-image-'+i" class="featured-reference-imagelink" (click)="selectDetail(item,'Federal')"><img class="reference-image" src="../assets/img/placeholder.jpg"></a>
+            <span [id]="'federal_assistance-link-'+i"  (click)="selectDetail(item,'Federal')" class="featured-reference-title">{{item.title}}</span>
           </div>
         </div>
       </div>
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="usa-width-one-whole m_L-8x relative federal-detail" *ngIf = "detailObj.Federal.showDetail">
+    <div class="usa-width-one-whole m_L-8x relative" *ngIf = "detailObj.Federal.showDetail">
       <div class="usa-width-one-twelfth div-right">&nbsp;</div>
       <div class="div-fill relative black-border ">
         <div class="usa-width-one-whole div-fill">
@@ -36,7 +36,7 @@
           </span>
           <div class="usa-width-one-whole">
             <img class="usa-width-one-whole p_R-4x p_L-4x" src="../assets/img/ECFR.png">
-            <p class="p_L-1x p_B-1x relative">{{detailObj.Federal.detail}}</p>
+            <p class="p_L-1x p_R-1x p_B-1x federal-detail">{{detailObj.Federal.detail}}</p>
             <span class="reference-content-link usa-external_link"><a>External Link</a></span>
 
           </div>
@@ -52,10 +52,10 @@
     <div class="usa-width-one-whole m_L-8x relative reference-image-container">
       <div class="usa-width-one-whole">
         <div class="usa-width-one-third pull-right" *ngFor="let item of data.Contract; let i= index">
-          <div class="usa-width-three-fourths image-wrap relative black-border">
-            <a class="featured-reference-toggle" (click)="selectDetail(item,'Contract')"><i class="fa fa-plus" [ngClass]="getItemClass(item,'Contract')"></i></a>
-            <a (click)="selectDetail(item,'Contract')"><img class="reference-image" src="../assets/img/placeholder.jpg"></a>
-            <span (click)="selectDetail(item,'Contract')" class="featured-reference-title">{{item.title}}</span>
+          <div class="usa-width-three-fourths image-wrap relative black-border" tabindex="0" (keyup.enter)="selectDetail(item,'Contract')">
+            <a [id]="'contract-icon-'+i" class="featured-reference-toggle" (click)="selectDetail(item,'Contract')"><i class="fa fa-plus" [ngClass]="getItemClass(item,'Contract')"></i></a>
+            <a [id]="'contract-image-'+i" (click)="selectDetail(item,'Contract')"><img class="reference-image" src="../assets/img/placeholder.jpg"></a>
+            <span [id]="'contract-link-'+i" (click)="selectDetail(item,'Contract')" class="featured-reference-title">{{item.title}}</span>
           </div>
         </div>
       </div>
@@ -68,7 +68,7 @@
     </div>
 
 
-    <div class="usa-width-one-whole m_L-8x relative contract-detail" *ngIf = "detailObj.Contract.showDetail">
+    <div class="usa-width-one-whole m_L-8x relative" *ngIf = "detailObj.Contract.showDetail">
       <div class="usa-width-one-twelfth div-right">&nbsp;</div>
       <div class="div-fill relative black-border">
         <div class="usa-width-one-whole div-fill relative">
@@ -78,7 +78,7 @@
           </span>
           <div class="usa-width-one-whole">
             <img class="usa-width-one-whole p_R-4x p_L-4x" src="../assets/img/ECFR.png">
-            <p class="p_L-1x p_B-1x">{{detailObj.Contract.detail}} </p>
+            <p class="p_L-1x p_R-1x p_B-1x contract-detail">{{detailObj.Contract.detail}}</p>
             <span class="reference-content-link usa-external_link"><a>External Link</a></span>
           </div>
 
