implement the rest of the alerts page, added unit tests

--- a/src/app/alerts/alerts.style.css
+++ b/src/app/alerts/alerts.style.css
@@ -40,6 +40,16 @@
   margin-top: .67em;
 }
 
+:host >>> input {
+  width: auto;
+  max-width: none;
+  display: inline;
+}
+
+:host >>> #datesPublished {
+  width: 100px;
+}
+
 :host >>> .usa-pagination {
   text-align: center;
 }
