Enable tabbing operation for header links

--- a/src/ui-kit/header-links/header-links.style.css
+++ b/src/ui-kit/header-links/header-links.style.css
@@ -13,7 +13,7 @@
 }
 
 .item-margin{
-  margin-left: 25%;
+  margin-left: 10%;
 }
 
 .link-disabled{
@@ -29,9 +29,12 @@
   vertical-align: top;
 }
 
-.dropdown-link{
-  text-decoration: none;
-  cursor: pointer;
+.dropdown-button{
+  padding: 0;
+  font-size: 1.25rem;
+  color: #000;
+  background-color: #fff;
+  width:80px;
 }
 
 .arrow-up {
@@ -44,4 +47,11 @@
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
   border-bottom: 8px solid white;
+}
+
+.header-link{
+  margin:0;
+  padding: 0;
+  background-color:#112e51;
+  text-decoration: underline ;
 }
