--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -218,3 +218,13 @@
     <agencyPicker [multimode]="false"></agencyPicker>
   </div>
 </div>
+<div class="usa-grid">
+  <h2 class="usa-width-one">Phone Entry &lt;samPhoneEntry&gt;</h2>
+  <div class="usa-width-one-third">
+    <samPhoneEntry [(model)]="phoneModel" (emitter)="phoneModelChange($event)"></samPhoneEntry>
+  </div>
+  <div class="usa-width-one-third">
+    <h3>Model</h3>
+    <pre><code>{{phoneModel | json}}</code></pre>
+  </div>
+</div>
